# factur_app

./: main.py  output.txt  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
android/app/main/: AndroidManifest.xml
android/app/main/res/xml/: file_paths.xml
