[project]
name = "ghanemsoft_invoice"
version = "1.0.0"
description = "نظام فواتير مع دعم الطباعة الحرارية"
authors = [{name = "غانم سوفت"}]
dependencies = [
    "flet>=0.21.0",
    "pillow>=10.0.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2"
]

[project.scripts]
ghanemsoft = "main:main"

[tool.flet]
app_name = "غانم سوفت"
app_description = "نظام الفواتير مع دعم الطباعة الحرارية"
app_author = "غانم سوفت"
app_version = "1.0.0"
icon = "icon.png"